# hydration-reminder

./: Cargo.toml  LICENSE  README.md  hrconfig.json  schema.json
assets/: icon.xcf
src/: config.rs  main.rs
