[package]
name = "hydration-reminder"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
eyre = "0.6.12"
image = "0.25.9"
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"

[profile.opt]
inherits = "release"
lto = true
codegen-units = 1
strip = true
panic = "abort"
